@@ -1,6 +1,10 @@
 gsKit ChangeLog:
 
 -> 01/12/05 - Chris Gilbert (Neovanglist)
+   * Fixed missing lines of texture bug.
+   * Fixed some issues in regards to halfbuffers.
+
+-> 01/12/05 - Chris Gilbert (Neovanglist)
    * Big commit - fixed many bugs!
    * HalfBuffers working now in PAL and NTSC
 
